Image sizes reduced

--- a/index.html
+++ b/index.html
@@ -61,15 +61,33 @@
 					</a>
 				</div>
 				<div class="col-xs-12 col-md-4 workImage">
+					<img src="images/empowering_souls.png"/>
+					<a class="after" id="PortfolioDetail_EmpoweringSouls" onclick="portfolioSelected(event,this.id,'Empowering Souls')">
+							<div class="portfolioInfo">Empowering Souls</div>
+						</a>
+				</div>
+				<div class="col-xs-12 col-md-4 workImage">
+					<img src="images/Blah_Blah.png"/>
+					<a class="after" id="PortfolioDetail_BlahBlah" onclick="portfolioSelected(event,this.id,'Blah Blah')">
+						<div class="portfolioInfo">Blah Blah</div>
+					</a>
+				</div>
+				<div class="col-xs-12 col-md-4 workImage">
+					<img src="images/modern_township.png"/>
+					<a class="after" id="PortfolioDetail_ModernTownship" onclick="portfolioSelected(event,this.id,'Modern Township')">
+						<div class="portfolioInfo">Modern Township</div>
+					</a>
+				</div>
+				<div class="col-xs-12 col-md-4 workImage">
 					<img src="images/Daawat_e_kebab.png"/>
 					<a class="after" id="PortfolioDetail_DaawatEKebab" onclick="portfolioSelected(event,this.id,'Daawat-E-Kabab')">
 						<div class="portfolioInfo">Daawat-E-Kabab</div>
 					</a>
 				</div>
 				<div class="col-xs-12 col-md-4 workImage">
-					<img src="images/Blah_Blah.png"/>
-					<a class="after" href="http://tadekam.com/" target="_blank">
-						<div class="portfolioInfo">Blah Blah</div>
+					<img src="images/Calligraphy.png"/>
+					<a class="after" id="PortfolioDetail_Calligraphy" onclick="portfolioSelected(event,this.id,'Calligraphy')">
+						<div class="portfolioInfo">Calligraphy</div>
 					</a>
 				</div>
 				<div class="col-xs-12 col-md-4 workImage">
@@ -79,27 +97,15 @@
 					</a>
 				</div>
 				<div class="col-xs-12 col-md-4 workImage">
-					<img src="images/Cookie_Bites.png"/>
-					<a class="after" id="PortfolioDetail_CookieBites" onclick="portfolioSelected(event,this.id,'Cookie Bites')">
-						<div class="portfolioInfo">Cookie Bites</div>
-					</a>
-				</div>
-				<div class="col-xs-12 col-md-4 workImage">
 					<img src="images/usaas.png"/>
 					<a class="after" id="PortfolioDetail_Usaas" onclick="portfolioSelected(event,this.id,'Usaas')">
 						<div class="portfolioInfo">Usaas</div>
 					</a>
 				</div>
 				<div class="col-xs-12 col-md-4 workImage">
-					<img src="images/empowering_souls.png"/>
-					<a class="after" id="PortfolioDetail_EmpoweringSouls" onclick="portfolioSelected(event,this.id,'Empowering Souls')">
-							<div class="portfolioInfo">Empowering Souls</div>
-						</a>
-				</div>
-				<div class="col-xs-12 col-md-4 workImage">
-					<img src="images/Calligraphy.png"/>
-					<a class="after" id="PortfolioDetail_Calligraphy" onclick="portfolioSelected(event,this.id,'Calligraphy')">
-						<div class="portfolioInfo">Calligraphy</div>
+					<img src="images/Cookie_Bites.png"/>
+					<a class="after" id="PortfolioDetail_CookieBites" onclick="portfolioSelected(event,this.id,'Cookie Bites')">
+						<div class="portfolioInfo">Cookie Bites</div>
 					</a>
 				</div>
 			</div>
@@ -172,6 +178,24 @@
 						</div>
 						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
 							The name Usaas means a goddess of Early morning.
+						</div>
+					</div>
+				</div>
+				<div class="row portfolioDetailImageHolder noPadding noMargin" id="portfolioDetailModernTownship">
+					<div class="row col-md-12 noPadding noMargin">
+						<img src="images/modern_township_detail.png" class="centerAlignImage"/>
+					</div>
+					<div class="row col-xs-12 col-md-12 portfolioDetailText">
+						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
+						</div>
+					</div>
+				</div>
+				<div class="row portfolioDetailImageHolder noPadding noMargin" id="portfolioDetailBlahBlah">
+					<div class="row col-md-12 noPadding noMargin">
+						<img src="images/blah_blah_detail.png" class="centerAlignImage" loading="lazy" alt="Blah Blah" width="100%"/>
+					</div>
+					<div class="row col-xs-12 col-md-12 portfolioDetailText">
+						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
 						</div>
 					</div>
 				</div>
