--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 		<link rel="shortcut icon" href="images/title_bar_logo.png" />
 		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/Swapnali.css">
-		<link rel="stylesheet" media='(min-width: 1200px)' href="css/Swapnali_Desktop.css">
+		<link rel="stylesheet" media='(min-width: 1000px)' href="css/Swapnali_Desktop.css">
 		<link rel="stylesheet" media='(min-width: 300px) and (max-width: 600px)' href="css/Swapnali_Mobile.css">
+		<link rel="stylesheet" media='(min-width: 601px) and (max-width: 999px)' href="css/Swapnali_Tablet.css">
 		<script src="jquery/jquery-3.3.1.min.js"></script>
 		<script src="bootstrap/js/bootstrap.min.js"></script>
 		<script src="js/Swapnali.js"></script>
@@ -26,9 +27,6 @@
 				<div class="col-xs-12 col-md-3 flatMenu">
 					<div class="row">
 						<div class="col-md-11 headerSocialMedia">
-							<span>
-								<a href="/" target="_blank"><img src="images/fb_logo.png"/></a>
-							</span>
 							<span>
 								<a href="/" target="_blank"><img src="images/insta_logo.png"/></a>
 							</span>
@@ -222,12 +220,12 @@
 				</div>
 			</div>
 			<div class="row mainContent" id="mainContentConnectMenu">
-				<div class="row">
+				<div class="row noPadding noMargin">
 					<div class="col-md-12 connectImageHolder">
 						<img src="images/connect.png"/>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row noPadding noMargin">
 					<div class="col-md-3"></div>
 					<div class="col-md-6">
 						<div class="row">
@@ -237,41 +235,37 @@
 						</div>
 						<div class="row">
 							<div class="connectContent noPadding noMargin">
-								<div class="col-md-4">
+								<div class="col-sm-5 col-md-4">
 									<div class="row connectContentRow">
-										<div class="col-xs-4 col-md-2 connectIconHolder"><img src="images/phone.png"/></div>
+										<div class="col-xs-offset-3 col-sm-offset-2 col-md-offset-0 col-xs-1 col-md-2 connectIconHolder"><img src="images/phone.png"/></div>
 										<div class="col-xs-8 col-md-10 connectFormText">+91 8698081168</div>
 									</div>
 									<div class="row connectContentRow">
-										<div class="col-xs-4 col-md-2 connectIconHolder"><img src="images/send.png"/></div>
+										<div class="col-xs-offset-3 col-sm-offset-2 col-md-offset-0 col-xs-1 col-md-2 connectIconHolder"><img src="images/send.png"/></div>
 										<div class="col-xs-8 col-md-10 connectFormText">swapsk.8@gmail.com</div>
 									</div>
 									<div class="row connectContentRow">
-										<div class="col-xs-4 col-md-2 connectIconHolder"><img src="images/pin.png"/></div>
+										<div class="col-xs-offset-3 col-sm-offset-2 col-md-offset-0 col-xs-1 col-md-2 connectIconHolder"><img src="images/pin.png"/></div>
 										<div class="col-xs-8 col-md-10 connectFormText">Pune, Maharashtra</div>
 									</div>
 									<div class="row connectContentRow">
-										<div class="col-xs-4 col-md-4 connectFormText">Follow</div>
-										<div class="col-xs-8 col-md-8 connectIconHolder connectFollow"><img src="images/fb_logo.png" style="margin-right:20px;"/><img src="images/insta_logo.png"/></div>
+										<div class="col-xs-offset-3 col-sm-offset-2 col-md-offset-0 col-xs-1 col-md-4 connectFormText textAlignCenter">Follow</div>
+										<div class="col-xs-8 col-md-8 connectIconHolder connectFollow"><img src="images/insta_logo.png"/></div>
 									</div>
 								</div>
-								<div class="col-md-2"></div>
-								<div class="col-md-6">
+								<div class="col-sm-0 col-md-2"></div>
+								<div class="col-sm-6 col-md-6 connectForm">
 									<div class="row connectContentRow">
-										<div class="col-xs-1"></div>
-										<div class="col-xs-10 col-md-12"><input type="textbox" name="name" placeholder="Name"/></div>
+										<div class="col-xs-offset-1 col-sm-offset-2 col-md-offset-0 col-xs-10 col-md-12 connectFormElementHolder"><input type="textbox" name="name" placeholder="Name"/></div>
 									</div>
 									<div class="row connectContentRow">
-										<div class="col-xs-1"></div>
-										<div class="col-xs-10 col-md-12"><input type="textbox" name="email" placeholder="Email"/></div>
+										<div class="col-xs-offset-1 col-sm-offset-2 col-md-offset-0 col-xs-10 col-md-12 connectFormElementHolder"><input type="textbox" name="email" placeholder="Email"/></div>
 									</div>
 									<div class="row connectContentRow">
-										<div class="col-xs-1"></div>
-										<div class="col-xs-10 col-md-12"><textarea name="message" rows="5" placeholder="Message"></textarea></div>
+										<div class="col-xs-offset-1 col-sm-offset-2 col-md-offset-0 col-xs-10 col-md-12 connectFormElementHolder"><textarea name="message" rows="5" placeholder="Message"></textarea></div>
 									</div>
 									<div class="row connectContentRow">
-										<div class="col-xs-1"></div>
-										<div class="col-xs-10 col-md-12" style="text-align:left;"><button name="send">Send</button></div>
+										<div class="col-xs-offset-1 col-sm-offset-2 col-md-offset-0 col-xs-10 col-md-12 connectFormElementHolder" style="text-align:left;"><button name="send">Send</button></div>
 									</div>
 								</div>
 							</div>
