Disable clicks on image and added descriptions

--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
 					<div class="row col-md-12 noPadding noMargin">
 						<img src="images/Calligraphy_Detail.png"/>
 					</div>
+					<div class="row col-xs-12 col-md-12 portfolioDetailText">
+						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
+							Inspired by Ancient calligraphy these are some calligraphy strokes crafted with digital tools.
+						</div>
+					</div>
 				</div>
 				<div class="row portfolioDetailImageHolder noPadding noMargin" id="portfolioDetailGipoor">
 					<div class="row col-md-12 noPadding noMargin">
@@ -125,10 +130,13 @@
 					</div>
 					<div class="row col-xs-12 col-md-12 portfolioDetailText">
 						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
-							Gipoor, a logo created for Iran based Fashion designer was a special experience. 
+							Gipoor. A logo created for Iran based Fashion designer was a special experience. 
 						</div>
 						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
-							The design is a reflection of Iran's traditional fabric pattern named Dantel, having gipoor embedded in the logo.
+							The design is a reflection of Iran's traditional fabric pattern named Dantel, having lettering Gipoor embedded in the logo.
+						</div>
+						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
+							The rich golden color with a gradient of yellow speaks for Gipoor as a mark of elegance. 
 						</div>
 					</div>
 				</div>
@@ -138,16 +146,30 @@
 					</div>
 					<div class="row col-xs-12 col-md-12 portfolioDetailText">
 						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
-							Cookie bites is a Pune's establishing cookie brand having delicious flavours and wide range of cookies.
+							The logo as the name suggests, was designed for everyone's favourite munchies, Cookies!
 						</div>
 						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
-							A simple yet catchy logo which is apt representation for everybody's favourite munchies, cookies!
+							Cookie bites is Pune's establishing cookie brand having delicious flavours and wide range of cookies.
+						</div>
+						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
+							A simple yet catchy logo suitable for all of their branding collateral.
 						</div>
 					</div>
 				</div>
 				<div class="row portfolioDetailImageHolder noPadding noMargin" id="portfolioDetailEmpoweringSouls">
 					<div class="row col-md-12 noPadding noMargin">
 						<img src="images/empowering_souls_detail.png" class="centerAlignImage"/>
+					</div>
+					<div class="row col-xs-12 col-md-12 portfolioDetailText">
+						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
+							Empowering souls as the name implies is about empowering human beings to grow and lead a path of greater awareness towards living life.
+						</div>
+						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
+							The logo is vector representation of petals coming together depicting oneness.
+						</div>
+						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
+							Simple Soulful, Spiritual, Strong and Stable are the five brand values showcased by using five different colors.
+						</div>
 					</div>
 				</div>
 				<div class="row portfolioDetailImageHolder noPadding noMargin" id="portfolioDetailDaawatEKebab">
@@ -156,10 +178,10 @@
 					</div>
 					<div class="row col-xs-12 col-md-12 portfolioDetailText">
 						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
-							A Typographical logotype for the Pune's restaurant.
+							A Typographical logotype for the Pune's restaurant Daawat-e-kebab.
 						</div>
 						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
-							Daawt - e - kebab is all about feast of kebabs which is a middle eastern food speciality popular among the world.
+							Daawat-e-kebab stands for feast of kebabs which is a speciality of middle east, popular among the world.
 						</div>
 					</div>
 				</div>
@@ -169,13 +191,13 @@
 					</div>
 					<div class="row col-xs-12 col-md-12 portfolioDetailText">
 						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
-							A very unique logo which a blend of Ether energy and technology resulting into energy solutions.
+							Usaas, a goddess of early morning. The logo is uniquely beautiful as it blends spirituality with technology.
 						</div>
 						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
-							Logo has seven colors of chakras with a vector of technology network ingrained.
+							Spiral of ether energy incorporated with nodes of network with seven colors of chakras ie focus points in the human body.
 						</div>
 						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
-							The name Usaas means a goddess of Early morning.
+							A design depicting this authentic elements of nature.
 						</div>
 					</div>
 				</div>
@@ -185,6 +207,13 @@
 					</div>
 					<div class="row col-xs-12 col-md-12 portfolioDetailText">
 						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
+							A picturesque imaginary township filled with all the modern amenities and facilities an individual aspires for in todays times.
+						</div>
+						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
+							A world well-connected within this township is expressed by colourful and detailed clusters of vector elements.
+						</div>
+						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
+							A township concept revolving around people and connectivity depicting peace, happiness, ease of life and modern way of living.
 						</div>
 					</div>
 				</div>
@@ -194,6 +223,13 @@
 					</div>
 					<div class="row col-xs-12 col-md-12 portfolioDetailText">
 						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
+							A funky and roaring theme developed with vector art illustrations.
+						</div>
+						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
+							A combo of elements merged together appearing as an intense and extrovert design.
+						</div>
+						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
+							Using contrast colors, typography, visual elements overlapping and placed in random and abstract manner defining freedom, imperfection, innovation and individualism in it's own unique way.
 						</div>
 					</div>
 				</div>
