--- a/index.html
+++ b/index.html
@@ -229,7 +229,10 @@
 							A combo of elements merged together appearing as an intense and extrovert design.
 						</div>
 						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
-							Using contrast colors, typography, visual elements overlapping and placed in random and abstract manner defining freedom, imperfection, innovation and individualism in it's own unique way.
+							Using contrast colors, typography, visual elements overlapping and placed in random and abstract manner
+						</div>
+						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
+							defining freedom, imperfection, innovation and individualism in it's own unique way.
 						</div>
 					</div>
 				</div>
