--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<div class="row">
 						<div class="col-md-11 headerSocialMedia">
 							<span>
-								<a href="/" target="_blank"><img src="images/insta_logo.png"/></a>
+								<a href="https://www.instagram.com/swapnali_artbook/" target="_blank"><img src="images/insta_logo.png"/></a>
 							</span>
 						</div>
 					</div>
@@ -288,8 +288,8 @@
 										<div class="col-xs-8 col-md-10 connectFormText">Pune, Maharashtra</div>
 									</div>
 									<div class="row connectContentRow">
-										<div class="col-xs-offset-3 col-sm-offset-2 col-md-offset-0 col-xs-1 col-md-4 connectFormText textAlignCenter">Follow</div>
-										<div class="col-xs-8 col-md-8 connectIconHolder connectFollow"><img src="images/insta_logo.png"/></div>
+										<div class="col-xs-offset-3 col-sm-offset-2 col-md-offset-0 col-xs-1 col-md-2 connectIconHolder"><a href="https://www.instagram.com/swapnali_artbook/" target="_blank"><img src="images/insta_logo.png"/></a></div>
+										<div class="col-xs-8 col-md-10 connectFormText">Follow Me</div>
 									</div>
 								</div>
 								<div class="col-sm-0 col-md-2"></div>
