--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 							The logo is vector representation of petals coming together depicting oneness.
 						</div>
 						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
-							Simple Soulful, Spiritual, Strong and Stable are the five brand values showcased by using five different colors.
+							Simple, Soulful, Spiritual, Strong and Stable are the five brand values showcased by using five different colors.
 						</div>
 					</div>
 				</div>
@@ -198,6 +198,9 @@
 						</div>
 						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
 							A design depicting this authentic elements of nature.
+						</div>
+						<div class="col-xs-offset-1 col-md-offset-0 col-xs-11 col-md-12">
+							On the other hand is the elegant calligraphic brand statement on the green wall which completes Usaas's facility branding.
 						</div>
 					</div>
 				</div>
@@ -248,10 +251,28 @@
 						<div class="aboutMeHolder">
 							<div class="aboutMeContainer">
 								<div class="aboutMeContent">
-									Hello there! I am Swapnali. I have been persuading design as a career since 4 wonderful years. My journey started with a small design studio in Pune and since then I have been exploring ‘design’ in many ways.
+									Hello there! I am Swapnali. I have been pursuing "art" in many ways since I was a kid. Curiosity never ended and I finally decided to explore design as a career. It has been more than 6 years and my passion is only rising.  My journey started with a small design studio in Pune and now I can say that the opportunities are endless.
 								</div>
 								<div class="aboutMeContent">
 									I am specialised in Graphic Design, Illustrations, User Experience & Interface Design. With these expertise, I have been successful in crafting creative campaigns for various brands. My experience in working for clients from startup’s to multinational companies, have enabled me to streamline art, design and functionality.
+								</div>
+								<div class="aboutMeContent">
+									I am here to assist you for - 
+									<ul style="list-style-type:none;padding:0;">
+										<li>Logo Design</li>
+										<li>Corporate Stationery</li>
+										<li>Product Branding</li>
+										<li>Facility Branding</li>
+										<li>Brochure Designs</li>
+										<li>Content Writing</li>
+										<li>Packaging Design</li>
+										<li>Static & Dynamic Websites</li>
+										<li>Mobile Apps</li>
+										<li>User Research</li>
+										<li>User Interface Design</li>
+										<li>User Experience Design</li>
+										<li>User Experience Consultancy</li>
+									</ul>
 								</div>
 							</div>
 						</div>
