--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 									Hello there! I am Swapnali. I have been pursuing "art" in many ways since I was a kid. Curiosity never ended and I finally decided to explore design as a career. It has been more than 6 years and my passion is only rising.  My journey started with a small design studio in Pune and now I can say that the opportunities are endless.
 								</div>
 								<div class="aboutMeContent">
-									I am specialised in Graphic Design, Illustrations, User Experience & Interface Design. With these expertise, I have been successful in crafting creative campaigns for various brands. My experience in working for clients from startup’s to multinational companies, have enabled me to streamline art, design and functionality.
+									I am specialised in Graphic Design, Illustrations, User Experience & Interface Design. With these expertise, I have been successful in crafting creative campaigns for various brands. My experience in working for clients from startup’s to multinational companies have enabled me to streamline art, design and functionality.
 								</div>
 								<div class="aboutMeContent">
 									I am here to assist you for - 
